--- a/index.html
+++ b/index.html
@@ -45,8 +45,19 @@
                 <option value="olives">olives</option>
                 <option value="peas">peas</option>
             </select>
-
-      </form> 
+        </select>
+        <select name="" id="types" class="form-control mb-3">
+            <option value="">Type of best crusty pizza</option>
+            <option value="flatbread">flatbread</option>
+            <option value="cheese">cheese</option>
+            <option value="thincrust">Thin crust</option>
+            <option value="Sicilian">Sicilian</option>
+            <option value="gluten free">Gluten Free</option>
+            
+        </select>
+        <input type="number" id="no_of_pizza" placeholder='how many pizzas would you like?' class="form-control mb-3">
+        <button type="submit" class="order btn btn-lg btn-danger btn-block">Order</button>
+                  </form> 
 
     </div>
 
