style the background color

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <h><strong>Pizza Hut</strong></h>
     <div class="container col-3">
         <form action="">
+            <div class="pizza">
             <select name="" id="size" class="form-control mb-3">
                 <option id="size" value="Enter you pizza size" class="form-control">Enter you pizza size</option>
                 <option id="size" value="large">large</option>
@@ -57,7 +58,9 @@
         </select>
         <input type="number" id="no_of_pizza" placeholder='how many pizzas would you like?' class="form-control mb-3">
         <button type="submit" class="order btn btn-lg btn-danger btn-block">Order</button>
+       </div>
                   </form> 
+
 
     </div>
 
