--- a/index.html
+++ b/index.html
@@ -133,7 +133,23 @@
 
         <button type="submit" class="order btn btn-lg btn-danger btn-block">Order</button>
     </div>
-
+     <div class="stella">
+        <table class="table">
+            <thead>
+              <tr>
+                <th>Size</th>
+                <th>Crust</th>
+                <th>Toppings</th>
+                <th>how much</th>
+                <th>Total</th>
+        
+              </tr>
+            </thead>
+            <tbody id="total">
+        
+            </tbody>
+        </table>
+     </div>
 </body>
 
 </html>
