--- a/index.html
+++ b/index.html
@@ -21,7 +21,49 @@
 </head>
 
 <body>
-    <h><strong>Pizza Hut</strong></h>
+    <h>Menu</h>
+    <div class="beff">
+        <table>
+
+            <tr>
+                <th>topping</th>
+                <th>Price</th>
+
+            </tr>
+            <tr>
+                <td>Beff</td>
+                <td>300</td>
+
+            </tr>
+            <tr>
+                <td>BBQ-chicken</td>
+                <td>400</td>
+
+            </tr>
+            <tr>
+                <td>Bacon</td>
+                <td>200</td>
+
+            </tr>
+            <tr>
+                <td>Ham</td>
+                <td>150</td>
+
+            </tr>
+            <tr>
+                <td>Blue-cheese</td>
+                <td>400</td>
+
+            </tr>
+            <tr>
+                <td>Others</td>
+                <td>300</td>
+
+            </tr>
+        </table>
+    </div>
+
+    <h1><strong>Pizza Hut</strong></h1>
     <div class="container col-3">
         <form action="">
             <div class="pizza">
@@ -90,47 +132,7 @@
         </div>
 
 
-        <div class="beff">
-            <table>
-
-                <tr>
-                    <th>topping</th>
-                    <th>Price</th>
-
-                </tr>
-                <tr>
-                    <td>Beff</td>
-                    <td>300</td>
-
-                </tr>
-                <tr>
-                    <td>BBQ-chicken</td>
-                    <td>400</td>
-
-                </tr>
-                <tr>
-                    <td>Bacon</td>
-                    <td>200</td>
-
-                </tr>
-                <tr>
-                    <td>Ham</td>
-                    <td>150</td>
-
-                </tr>
-                <tr>
-                    <td>Blue-cheese</td>
-                    <td>400</td>
-
-                </tr>
-                <tr>
-                    <td>Others</td>
-                    <td>300</td>
-
-                </tr>
-            </table>
-        </div>
-
+        
         <button type="submit" class="order btn btn-lg btn-danger btn-block">Order</button>
     </div>
      <div class="stella">
@@ -149,6 +151,7 @@
         
             </tbody>
         </table>
+        <p>Total Checkout  <span class="ttlCheck"></span></p>
      </div>
 </body>
 
